--- a/css/master.css
+++ b/css/master.css
@@ -71,3 +71,31 @@ html, body {
   float: right;
   margin-right: 20px;
 }
+.scroll-date {
+  background-color: #A22;
+  width : 100px;
+  height : 20px;
+}
+.scroll-box {
+  background-color: #2A2;
+  margin: 0px;
+  width: 20px;
+  height : 20px;
+  overflow-y: scroll;
+  display: inline-block;
+}
+
+.scroll-box:hover {
+  height : 40px;
+  transform: translate(0,-10px);
+
+}
+.scroll-box::-webkit-scrollbar {
+  display: none;
+}
+
+.scroll-box p {
+  position: relative;
+  margin: 0px;
+  transform: translate(0, -1em);
+}
